# RustAuth

./: .env  .gitignore  Cargo.toml
auth_core/: Cargo.toml
auth_core/src/: config.rs  lib.rs
auth_core/src/model/: mod.rs  session.rs  state.rs  users.rs
auth_core/src/util/: mod.rs  validation.rs
cli/: Cargo.toml
cli/src/: cli_config.rs  main.rs
migrations/: 20251027093855_create_user.sql  20251103122732_user_session.sql
server/: Cargo.toml  main.rs
src/: cli_config.rs  config.rs  main.rs
src/model/: mod.rs  session.rs  users.rs
src/repository/: user_repo.rs
src/service/: user_service.rs
src/util/: security.rs  validation.rs
