[package]
name = "rust-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
anyhow = "1.0"
thiserror = "1.0"

argon2 = "0.4"
password-hash = "0.4"
secrecy = "0.8"
rand = "0.8"
zeroize = "1.5"
dotenv = "0.15"
regex = "1"
lazy_static = "1"

# dev
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
